--- a/ms/index.html
+++ b/ms/index.html
@@ -17,6 +17,7 @@
       // paceOptions = { elements: { selectors: ['img'] } };
       imgurl = "/assets/img";
     </script>
+
     <script src="/assets/js/vendor.head.js"></script>
 
     <link href="/assets/css/site.css" rel="stylesheet">
@@ -58,15 +59,18 @@
           <div class="small-12 columns">
             <!-- <h2 class="salam">Assalamualaikum Warahmatullah.</h2> -->
             <div class="salam">
-              <img src="/assets/img/salam_white.png" alt="">
+              <img src="/assets/img/salam.svg" alt="">
             </div>
 
-            <div class="masthead-logo">
+            <div class="masthead-logo hide">
               <!-- <a href="#"><img alt="logo" src="/assets/img/logo_white.png"></a> -->
             </div>
 
-            <h1><strong>Caravan of Praise.</strong></h1>
-            <h2 class="subheader">Come Join The Caravan!</h2>
+            <div class="slab-wrapper">
+              <h1 class="slab caravan-of">Caravan of</h1>
+              <h1 class="slab praise">Praise</h1>
+              <h2 class="slab sub">Come Join The Caravan</h2>
+            </div>
 
             <!-- <a class="scrollto" href="#explore">
               <p class="scrollto--arrow"></p>
