--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <body class="index">
 
     <!-- Preloader -->
-    <div class="preloader"><img src="/assets/img/loading-spin.svg"></div>
+    <!-- <div class="preloader"><img src="/assets/img/loading-spin.svg"></div> -->
     <!-- Background -->
-    <div class="bg-pattern bg-pattern-vertical"></div>
+    <!-- <div class="bg-pattern bg-pattern-vertical"></div> -->
     <!-- Video BG -->
     <div class="back-vide" data-vide-bg="/assets/img/video-conv"></div>
 
@@ -42,21 +42,21 @@
     <main class="masthead screen" id="top" role="main" data-scroll-index="0">
       <div class="container">
         <div class="row">
-          <div class="small-12 columns">
+          <div class="large-12 columns">
             <!-- <h2 class="salam">Assalamualaikum Warahmatullah.</h2> -->
             <div class="salam">
               <img src="/assets/img/salam.svg" alt="">
             </div>
 
-            <div class="masthead-logo hide">
-              <!-- <a href="#"><img alt="logo" src="/assets/img/logo_white.png"></a> -->
+            <div class="masthead-logo">
+              <img alt="logo" src="/assets/img/logo.svg">
             </div>
 
-            <div class="slab-wrapper">
-              <h1 class="slab caravan-of">Caravan of</h1>
-              <h1 class="slab praise">Praise</h1>
-              <h2 class="slab sub">Come Join The Caravan</h2>
-            </div>
+            <!-- <div class="bigtext-wrapper">
+              <h1 class="caravan-of">Caravan of</h1>
+              <h1 class="praise">Praise</h1>
+              <h2 class="sub">Come Join The Caravan</h2>
+            </div> -->
           </div>
         </div>
       </div>
@@ -69,12 +69,7 @@
           <h1>Together with us.</h1>
           <h1 class="subheader">Let's dakwah through music.</h2>
         </div>
-        <div class="medium-6 large-6 columns footer-address text-left small-only-text-center">
-          <p>
-            <!-- address -->
-          </p>
-        </div>
-        <div class="medium-6 large-6 columns footer-links text-right small-only-text-center">
+        <div class="large-12 columns footer-links text-center">
           <h3>&copy; 2014 All rights reserved.</h3>
           <h4>Developed with <i class="fa fa-heart"></i> by Mahabbah Tech.</h4>
         </div>
@@ -82,9 +77,9 @@
     </footer>
 
 
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script> -->
     <script src="/assets/js/vendor.js"></script>
     <script src="/assets/js/site.js"></script>
 
   </body>
 </html>
-
