--- a/index.html
+++ b/index.html
@@ -66,8 +66,53 @@
     <footer class="container" data-scroll-index="5">
       <div class="row">
         <div class="large-12 footer-text text-center">
-          <h1>Together with us.</h1>
-          <h1 class="subheader">Let's dakwah through music.</h2>
+          <h2>Caravan of Praise</h2>
+          <p>
+            Caravan of Praise<br>
+            Journey to embrace<br>
+            In all the light and grace<br>
+            Caravan of Praise
+          </p>
+          <p>
+            We gather round the warm camp fire<br>
+            After a long days toll<br>
+            Singing songs of our hearts desire<br>
+            So many tales untold
+          </p>
+          <p>
+            Longing to live like our great forefathers<br>
+            Heaven guided this journey unfolds
+          </p>
+          <p>
+            Caravan of Praise<br>
+            Journey to embrace<br>
+            In all the light and grace<br>
+            Caravan of Praise
+          </p>
+          <p>
+            As morning light invites the day<br>
+            Lighting up the way home<br>
+            Hope is alive and a living prayer<br>
+            That's all we'll ever need you know
+          </p>
+          <p>
+            Destiny's calling our names and we'll answer<br>
+            With all our hearts, O Heaven, and soul!
+          </p>
+          <p>
+            Caravan of Praise<br>
+            Journey to embrace<br>
+            In all the light and grace<br>
+            Caravan of Praise
+          </p>
+          <p>
+            Caravan of Praise<br>
+            For every color and race<br>
+            In every heart there's space...<br>
+            To join the Caravan of Praise!
+          </p>
+          <h1>Come join the caravan.</h1>
+          <h1 class="subheader">Praise Allah together.</h2>
         </div>
         <div class="large-12 columns footer-links text-center">
           <h3>&copy; 2014 All rights reserved.</h3>
