--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <!-- Preloader -->
     <!-- <div class="preloader"><img src="/assets/img/loading-spin.svg"></div> -->
     <!-- Background -->
-    <!-- <div class="bg-pattern bg-pattern-vertical"></div> -->
+    <div class="bg-layer"></div>
+    <!-- <div class="backstretch backstretch-1"></div>
+    <div class="backstretch backstretch-2"></div> -->
     <!-- Video BG -->
-    <div class="back-vide" data-vide-bg="/assets/img/video-conv"></div>
+    <!-- <div class="back-vide" data-vide-bg="/assets/img/video-conv"></div> -->
 
     <!-- ******************** MASTHEAD SECTION ******************** -->
     <main class="masthead screen" id="top" role="main" data-scroll-index="0">
@@ -45,11 +47,11 @@
           <div class="large-12 columns">
             <!-- <h2 class="salam">Assalamualaikum Warahmatullah.</h2> -->
             <div class="salam">
-              <img src="/assets/img/salam.svg" alt="">
+              <img src="/assets/img/salam.png" alt="">
             </div>
 
             <div class="masthead-logo">
-              <img alt="logo" src="/assets/img/logo.svg">
+              <img alt="logo" src="/assets/img/logo.png">
             </div>
 
             <!-- <div class="bigtext-wrapper">
@@ -62,63 +64,84 @@
       </div>
     </main>
 
-    <!-- ******************** FOOTER ******************** -->
-    <footer class="container" data-scroll-index="5">
-      <div class="row">
-        <div class="large-12 footer-text text-center">
-          <h2>Caravan of Praise</h2>
-          <p>
-            Caravan of Praise<br>
-            Journey to embrace<br>
-            In all the light and grace<br>
-            Caravan of Praise
-          </p>
-          <p>
-            We gather round the warm camp fire<br>
-            After a long days toll<br>
-            Singing songs of our hearts desire<br>
-            So many tales untold
-          </p>
-          <p>
-            Longing to live like our great forefathers<br>
-            Heaven guided this journey unfolds
-          </p>
-          <p>
-            Caravan of Praise<br>
-            Journey to embrace<br>
-            In all the light and grace<br>
-            Caravan of Praise
-          </p>
-          <p>
-            As morning light invites the day<br>
-            Lighting up the way home<br>
-            Hope is alive and a living prayer<br>
-            That's all we'll ever need you know
-          </p>
-          <p>
-            Destiny's calling our names and we'll answer<br>
-            With all our hearts, O Heaven, and soul!
-          </p>
-          <p>
-            Caravan of Praise<br>
-            Journey to embrace<br>
-            In all the light and grace<br>
-            Caravan of Praise
-          </p>
-          <p>
-            Caravan of Praise<br>
-            For every color and race<br>
-            In every heart there's space...<br>
-            To join the Caravan of Praise!
-          </p>
-          <h1>Come join the caravan.</h1>
-          <h1 class="subheader">Praise Allah together.</h2>
-        </div>
-        <div class="large-12 columns footer-links text-center">
-          <h3>&copy; 2014 All rights reserved.</h3>
-          <h4>Developed with <i class="fa fa-heart"></i> by Mahabbah Tech.</h4>
+    <!-- ******************** LYRICS ******************** -->
+    <section class="lyrics" data-scroll-index="2">
+      <div class="container">
+        <div class="row">
+          <!-- <div class="large-12 columns">
+            <h1>Caravan of Praise</h1>
+          </div> -->
+
+          <div class="large-6 columns">
+            <p class="big">
+              Caravan of Praise<br>
+              Journey to embrace<br>
+              In all the light and grace<br>
+              Caravan of Praise
+            </p>
+            <p>
+              We gather round the warm camp fire<br>
+              After a long days toll<br>
+              Singing songs of our hearts desire<br>
+              So many tales untold
+            </p>
+            <p>
+              Longing to live like our great forefathers<br>
+              Heaven guided this journey unfolds
+            </p>
+            <p>
+              Caravan of Praise<br>
+              Journey to embrace<br>
+              In all the light and grace<br>
+              Caravan of Praise
+            </p>
+          </div>
+
+          <div class="large-6 columns">
+            <p>
+              As morning light invites the day<br>
+              Lighting up the way home<br>
+              Hope is alive and a living prayer<br>
+              That's all we'll ever need you know
+            </p>
+            <p class="big">
+              Destiny's calling our names and we'll answer<br>
+              With all our hearts, O Heaven, and soul!
+            </p>
+            <p>
+              Caravan of Praise<br>
+              Journey to embrace<br>
+              In all the light and grace<br>
+              Caravan of Praise
+            </p>
+            <p>
+              Caravan of Praise<br>
+              For every color and race<br>
+              In every heart there's space...<br>
+              To join the Caravan of Praise!
+            </p>
+          </div>
         </div>
       </div>
+    </section>
+
+    <!-- ******************** FOOTER ******************** -->
+    <footer data-scroll-index="3">
+      <div class="container">
+        <div class="row">
+          <div class="large-12 columns footer-text text-center bigtext-wrapper">
+            <h1>Come Join The Caravan.</h1>
+            <h2>Let's Praise Allah Together.</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-12 columns footer-links text-center">
+            <h3>&copy; 2014 All rights reserved.</h3>
+            <h4>Developed with <i class="fa fa-heart"></i> by Mahabbah Tech.</h4>
+          </div>
+        </div>
+      </div>
+
     </footer>
 
 
@@ -132,7 +155,7 @@
       ga('send', 'pageview');
 
     </script>
-    <!-- <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script> -->
+    <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
     <script src="/assets/js/vendor.js"></script>
     <script src="/assets/js/site.js"></script>
 
