--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- <div class="preloader"><img src="/assets/img/loading-spin.svg"></div> -->
     <!-- Background -->
     <div class="bg-layer"></div>
-    <!-- <div class="backstretch backstretch-1"></div>
-    <div class="backstretch backstretch-2"></div> -->
+    <div class="backstretch backstretch-1"></div>
+    <!-- <div class="backstretch backstretch-2"></div> -->
     <!-- Video BG -->
     <!-- <div class="back-vide" data-vide-bg="/assets/img/video-conv"></div> -->
 
