Big design change.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 
     <link rel="shortcut icon" href="/assets/img/favicon.png">
 
+    <link href="/assets/css/site.css" rel="stylesheet">
+
     <script>
       // paceOptions = { elements: { selectors: ['img'] } };
       imgurl = "/assets/img";
     </script>
 
+    <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
     <script src="/assets/js/vendor.head.js"></script>
-
-    <link href="/assets/css/site.css" rel="stylesheet">
+    <script src="/assets/js/head.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,20 +47,16 @@
       <div class="container">
         <div class="row">
           <div class="large-12 columns">
-            <!-- <h2 class="salam">Assalamualaikum Warahmatullah.</h2> -->
-            <div class="salam">
+            <!-- <div class="salam">
               <img src="/assets/img/salam.png" alt="">
-            </div>
+            </div> -->
+
+            <h1>Come Join The Caravan</h1>
+            <h2>Let's Raise To Praise</h2>
 
             <div class="masthead-logo">
               <img alt="logo" src="/assets/img/logo.png">
             </div>
-
-            <!-- <div class="bigtext-wrapper">
-              <h1 class="caravan-of">Caravan of</h1>
-              <h1 class="praise">Praise</h1>
-              <h2 class="sub">Come Join The Caravan</h2>
-            </div> -->
           </div>
         </div>
       </div>
@@ -68,10 +66,12 @@
     <section class="lyrics" data-scroll-index="2">
       <div class="container">
         <div class="row">
-          <!-- <div class="large-12 columns">
-            <h1>Caravan of Praise</h1>
-          </div> -->
+          <div class="large-12 columns">
+            <h1>&ldquo;Caravan of Praise&rdquo;</h1>
+          </div>
+        </div>
 
+        <div class="row">
           <div class="large-6 columns">
             <p class="big">
               Caravan of Praise<br>
@@ -122,6 +122,21 @@
             </p>
           </div>
         </div>
+
+        <img class="pencil" src="/assets/img/pencil.png" alt="">
+      </div>
+    </section>
+
+    <section class="big-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="small-10 small-centered columns">
+            <div class="bigtext-wrapper">
+              <h1>Come Join The Caravan</h1>
+              <h2>Let's Praise To Raise</h2>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -129,19 +144,14 @@
     <footer data-scroll-index="3">
       <div class="container">
         <div class="row">
-          <div class="large-12 columns footer-text text-center bigtext-wrapper">
-            <h1>Come Join The Caravan.</h1>
-            <h2>Let's Praise Allah Together.</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-12 columns footer-links text-center">
-            <h3>&copy; 2014 All rights reserved.</h3>
-            <h4>Developed with <i class="fa fa-heart"></i> by Mahabbah Tech.</h4>
+          <div class="large-12 columns">
+            <div class="box">
+              <p>&copy; 2014 All rights reserved.</p>
+              <p class="credit">Developed with <i class="fa fa-heart"></i> by Mahabbah Tech.</p>
+            </div>
           </div>
         </div>
       </div>
-
     </footer>
 
 
@@ -155,7 +165,6 @@
       ga('send', 'pageview');
 
     </script>
-    <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
     <script src="/assets/js/vendor.js"></script>
     <script src="/assets/js/site.js"></script>
 
