--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <img src="/assets/img/salam.png" alt="">
             </div> -->
 
-            <h1>Come Join The Caravan</h1>
-            <h2>Let's Raise To Praise</h2>
+            <h1 class="wow bounce-in-down" data-wow-delay="0s">Come Join The Caravan</h1>
+            <h2 class="wow fade-in-up" data-wow-delay="1s">Let's Raise To Praise</h2>
 
             <div class="masthead-logo">
               <img alt="logo" src="/assets/img/logo.png">
@@ -67,7 +67,16 @@
       <div class="container">
         <div class="row">
           <div class="large-12 columns">
-            <h1>&ldquo;Caravan of Praise&rdquo;</h1>
+            <h1 class="wow fade-in-left" data-wow-delay="0s">&ldquo;Caravan of Praise&rdquo;</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-12 columns">
+            <h3 class="wow fade-in-right" data-wow-delay="0.5s">
+              <strong>Lyrics by</strong> Erwan Muhibbain &middot;
+              <strong>Song by</strong> Fuad Priakustik
+            </h3>
           </div>
         </div>
 
@@ -132,8 +141,8 @@
         <div class="row">
           <div class="small-10 small-centered columns">
             <div class="bigtext-wrapper">
-              <h1>Come Join The Caravan</h1>
-              <h2>Let's Praise To Raise</h2>
+              <h1 class="hsjs wow fade-in-left" data-wow-delay="0s">Come Join The Caravan</h1>
+              <h2 class="hsjs wow fade-in-right" data-wow-delay="0.5s">Let's Praise To Raise</h2>
             </div>
           </div>
         </div>
