--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
 
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
-    <script src="/assets/js/vendor.head.js"></script>
+    <!-- <script src="/assets/js/vendor.head.js"></script> -->
     <script src="/assets/js/head.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -33,14 +33,8 @@
 
   <body class="index">
 
-    <!-- Preloader -->
-    <!-- <div class="preloader"><img src="/assets/img/loading-spin.svg"></div> -->
     <!-- Background -->
     <div class="bg-layer"></div>
-    <div class="backstretch backstretch-1"></div>
-    <!-- <div class="backstretch backstretch-2"></div> -->
-    <!-- Video BG -->
-    <!-- <div class="back-vide" data-vide-bg="/assets/img/video-conv"></div> -->
 
     <!-- ******************** MASTHEAD SECTION ******************** -->
     <main class="masthead screen" id="top" role="main" data-scroll-index="0">
@@ -136,14 +130,159 @@
       </div>
     </section>
 
+    <!-- ******************** BIG BOTTOM ******************** -->
     <section class="big-bottom">
       <div class="container">
         <div class="row">
-          <div class="small-10 small-centered columns">
+          <div class="small-10 large-9 small-centered columns">
             <div class="bigtext-wrapper">
               <h1 class="hsjs wow fade-in-left" data-wow-delay="0s">Come Join The Caravan</h1>
               <h2 class="hsjs wow fade-in-right" data-wow-delay="0.5s">Let's Praise To Raise</h2>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ******************** MASONRY ******************** -->
+    <section class="gallery">
+      <div class="container">
+        <div class="row">
+          <div class="small-12 columns">
+            <!-- <h2>Our Activites</h2> -->
+
+            <div class="masonry">
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/20140920_142520.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/20140920_142651.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/20141008_155728.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/20141008_155738.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/20141009_001828.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/20141009_002435_15.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/20141018_073446.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0001.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0023.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0026.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0030.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0032.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0036.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0037.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141010-WA0031.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141018-WA0018.jpg" alt=""></div>
+              </div>
+              <div class="item w2">
+                <div class="in"><img src="/assets/img/gth/IMG-20141019-WA0005.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141008_180729.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141008_180937.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141008_182816.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141008_183533.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141008_193514.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_134212.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_135634.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_141106.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_150324.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_154822.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_160716.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_162858.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_182833.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_191940.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_192436.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_204235.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141018_204358.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_104311.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_105614.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_110057.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_111327.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_114232.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_122600.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_123130.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_130442.jpg" alt=""></div>
+              </div>
+              <div class="item">
+                <div class="in"><img src="/assets/img/gth/IMG_20141019_144439.jpg" alt=""></div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
